--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
