--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@tabler/icons": "^2.17.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "rxjs": "~7.8.0",
